# P2PNotifier

./: Notes.txt  README.md  debug_ssh_server.sh
notification-client/AndroidClient/: settings.gradle
notification-client/AndroidClient/app/: build.gradle
notification-client/AndroidClient/app/src/main/: AndroidManifest.xml
notification-client/AndroidClient/app/src/main/java/com/example/androidclient/: App.java  ClientThread.java  Crypto.java  InputValidator.java  MainActivity.java  Message.java  MessageType.java  MyAdapter.java  NotificationListener.java  ReceiveMessageService.java  SendMessage.java  SendNotificationService.java  SessionActivity.java  Utils.java
notification-client/AndroidClient/app/src/main/java/com/example/androidclient/scanner/: ScannerActivity.java
notification-client/AndroidClient/app/src/main/java/com/example/androidclient/ssl/: MyPSKKeyManager.java
notification-client/AndroidClient/app/src/main/res/layout/: activity_main.xml  activity_scanner.xml  activity_session.xml  content_main.xml  custom_back_button.xml  my_row.xml  my_row_2.xml
notification-client/AndroidClient/app/src/main/res/menu/: menu_main.xml
notification-client/AndroidClient/app/src/main/res/values/: strings.xml
notification-client/AndroidClient/gradle/wrapper/: gradle-wrapper.properties
notification-server/: README.md  SECRETS  config.yml  notification_handler.py  notification_server.py  pyproject.toml  secrets_handler.py  socket_server.py  tray_icon_handler.py
